@@ -20,6 +20,11 @@ nytprof.out
 pm_to_blib
 README
 README.pod
+examples/.admin
+t/admin.log
 t/ipc_srlock*
+t/secure/*
+t/script.log
+t/users.sub
 *.tar.gz
 Unix-SetuidWrapper-*
