@@ -1,6 +1,8 @@
 use t::boilerplate;
 
 use Test::More;
+use English qw( -no_match_vars );
+use File::DataClass::IO;
 
 use_ok 'Unix::SetuidWrapper';
 
@@ -14,10 +16,26 @@ use_ok 'Unix::SetuidWrapper';
    $INC{ 'TestProg.pm' } = __FILE__;
 }
 
-my $wrapper = TestProg->new( config => { tempdir => 't', vardir => 't' },
-                             noask  => 1, );
+my $group = getgrgid( $GID );
+my $subf  = io( [ 't', "${group}.sub" ] );
+
+$subf->println( 'init_suid_wrapper' );
+
+my $wrapper = TestProg->new( config  => { tempdir => 't', vardir => 't' },
+                             noask   => 1,
+                             secsdir => 't', );
 
 ok exists $wrapper->_role_map->{root}, 'Root exists';
+
+$wrapper = TestProg->new_with_options( config  => { tempdir => 't',
+                                                    vardir  => 't' },
+                                       method  => 'init_suid_wrapper',
+                                       noask   => 1,
+                                       secsdir => 't');
+
+is $wrapper->secsdir->pathname, io( [ 't' ] )->pathname, 'Secure dir';
+
+like $wrapper->untainted_cmd, qr{ \.10test_script\.t }mx, 'Untainted cmd';
 
 done_testing;
 
